# fmtt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.config/: nextest.toml
.github/workflows/: rust.yml
python/fmtt/: __init__.py
src/: lib.rs  main.rs  paragraph_start.rs  paragraphs.rs  split_points.rs  tests.rs  words.rs
src/snapshots/: fmtt__tests__abbr.snap  fmtt__tests__backtick.snap  fmtt__tests__bracket.snap  fmtt__tests__extra_line_breaks.snap  fmtt__tests__gpt1.snap  fmtt__tests__indented.snap  fmtt__tests__indented_and_allow_indented_paragraphs.snap  fmtt__tests__latex_comments.snap  fmtt__tests__latex_figure.snap  fmtt__tests__long_link.snap  fmtt__tests__long_link_long_description.snap  fmtt__tests__long_word.snap  fmtt__tests__lorem.snap  fmtt__tests__many_commas.snap  fmtt__tests__markdown_headers_separators.snap  fmtt__tests__markdown_mix.snap  fmtt__tests__markdown_ordered_list.snap  fmtt__tests__markdown_unordered_list.snap  fmtt__tests__parentheses.snap
src/tests/: format.rs
src/tests/snapshots/: fmtt__tests__format__abbr-2.snap  fmtt__tests__format__abbr-3.snap  fmtt__tests__format__abbr.snap  fmtt__tests__format__backtick-2.snap  fmtt__tests__format__backtick-3.snap  fmtt__tests__format__backtick.snap  fmtt__tests__format__bracket-2.snap  fmtt__tests__format__bracket-3.snap  fmtt__tests__format__extra_line_breaks-2.snap  fmtt__tests__format__extra_line_breaks-3.snap  fmtt__tests__format__extra_line_breaks.snap  fmtt__tests__format__gpt1-2.snap  fmtt__tests__format__gpt1-3.snap  fmtt__tests__format__gpt1.snap  fmtt__tests__format__indented-2.snap  fmtt__tests__format__indented-3.snap  fmtt__tests__format__indented_and_allow_indented_paragraphs-2.snap  fmtt__tests__format__indented_and_allow_indented_paragraphs-3.snap  fmtt__tests__format__indented_and_allow_indented_paragraphs.snap  fmtt__tests__format__latex_comments-2.snap  fmtt__tests__format__latex_comments-3.snap  fmtt__tests__format__latex_comments.snap  fmtt__tests__format__latex_figure-2.snap  fmtt__tests__format__latex_figure.snap  fmtt__tests__format__long_link-2.snap  fmtt__tests__format__long_link-3.snap  fmtt__tests__format__long_link.snap  fmtt__tests__format__long_link_long_description-2.snap  fmtt__tests__format__long_link_long_description-3.snap  fmtt__tests__format__long_link_long_description.snap  fmtt__tests__format__long_word-2.snap  fmtt__tests__format__long_word-3.snap  fmtt__tests__format__long_word.snap  fmtt__tests__format__lorem-2.snap  fmtt__tests__format__lorem-3.snap  fmtt__tests__format__lorem.snap  fmtt__tests__format__many_commas-2.snap  fmtt__tests__format__many_commas-3.snap  fmtt__tests__format__many_commas.snap  fmtt__tests__format__markdown_headers_separators-2.snap  (+14 more)
