[package]
name = "fmtt"
version = "0.3.0"
edition = "2021"
description = "A stupid text formatter that tries to break lines on sensible punctuations."
license = "MIT"
repository = "https://github.com/SichangHe/fmtt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1", default_features = false }
tracing-subscriber = { version = "0.3", default_features = false, features = [
    "env-filter",
    "fmt",
    "smallvec",
] }

[profile.release]
opt-level = "s"
lto = true
