[project]
name = "fmtt"
version = "0.5.0"
description = "Python binding for ForMaT Text (FMTT)"
authors = [
    { name = "Steven Hé (Sīchàng)", email = "stevensichanghe@gmail.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "fmtt._lowlevel"
features = ["pyo3/extension-module", "py"]
